syntax = "proto3";

package crescent.amm.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package                      = "github.com/crescent-network/crescent/v5/x/amm/types";
option (gogoproto.goproto_getters_all) = false;

message Params {
  repeated cosmos.base.v1beta1.Coin pool_creation_fee = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin shared_position_creation_fee = 2
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
  uint32   default_tick_spacing                                       = 3;
  repeated cosmos.base.v1beta1.Coin private_farming_plan_creation_fee = 4
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
  uint32                   max_num_private_farming_plans = 5;
  google.protobuf.Duration max_rewards_block_time = 6 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}

message Pool {
  uint64 id              = 1;
  uint64 market_id       = 2;
  string denom0          = 3;
  string denom1          = 4;
  uint32 tick_spacing    = 5;
  string reserve_address = 6;
}

message PoolState {
  int32  current_tick  = 1;
  string current_price = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string current_liquidity = 3
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string fee_growth_global0 = 4
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string fee_growth_global1 = 5
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.DecCoin farming_rewards_growth_global = 6
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.nullable) = false];
}

message Position {
  uint64 id         = 1;
  uint64 pool_id    = 2;
  string owner      = 3;
  int32  lower_tick = 4;
  int32  upper_tick = 5;
  string liquidity  = 6
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string last_fee_growth_inside0 = 7
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string last_fee_growth_inside1 = 8
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string owed_token0 = 9
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string owed_token1 = 10
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.DecCoin last_farming_rewards_growth_inside = 11
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin owed_farming_rewards = 12
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

message SharedPosition {
  uint64                   position_id = 1;
  cosmos.base.v1beta1.Coin total_share = 2 [(gogoproto.nullable) = false];
}

message TickInfo {
  string gross_liquidity = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string net_liquidity = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string fee_growth_outside0 = 3
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string fee_growth_outside1 = 4
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.DecCoin farming_rewards_growth_outside = 5
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.nullable) = false];
}

message FarmingPlan {
  uint64                    id                   = 1;
  string                    description          = 2;
  string                    farming_pool_address = 3;
  string                    termination_address  = 4;
  repeated RewardAllocation reward_allocations   = 5 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp start_time           = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp end_time             = 7 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  bool                      is_private           = 8;
  bool                      is_terminated        = 9;
}

message RewardAllocation {
  uint64   pool_id                                  = 1;
  repeated cosmos.base.v1beta1.Coin rewards_per_day = 2
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}
