syntax = "proto3";

package crescent.exchange.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package                      = "github.com/crescent-network/crescent/v5/x/exchange/types";
option (gogoproto.goproto_getters_all) = false;

message Params {
  repeated cosmos.base.v1beta1.Coin market_creation_fee = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
  string default_maker_fee_rate = 2
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string default_taker_fee_rate = 3
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  google.protobuf.Duration max_order_lifespan = 4 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}

message Market {
  uint64 id             = 1;
  string base_denom     = 2;
  string quote_denom    = 3;
  string escrow_address = 4;
  string maker_fee_rate = 5
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string taker_fee_rate = 6
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message MarketState {
  string last_price = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}

message Order {
  uint64 id        = 1;
  string orderer   = 2;
  uint64 market_id = 3;
  bool   is_buy    = 4;
  string price    = 5 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string quantity = 6 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64  msg_height    = 7;
  string open_quantity = 8
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string remaining_deposit = 9
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  google.protobuf.Timestamp deadline = 10 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}
